add info for v1 low energy

--- a/models/Jpsi/TrigL2_20210227_v1/ElectronRingerTightTriggerConfig.conf
+++ b/models/Jpsi/TrigL2_20210227_v1/ElectronRingerTightTriggerConfig.conf
@@ -1,7 +1,7 @@
-__name__:                                should_be_filled
-__version__:                             should_be_filled
-__operation__:                           tight_cutbased
-__signature__:                           should_be_filled
+__name__:                                TrigL2_20210227_v1
+__version__:                             v1
+__operation__:                           Tight
+__signature__:                           electron
 Model__size:                             15
 Model__etmin:                            0; 0; 0; 0; 0; 3; 3; 3; 3; 3; 10; 10; 10; 10; 10
 Model__etmax:                            3; 3; 3; 3; 3; 10; 10; 10; 10; 10; 15; 15; 15; 15; 15
